zobrist hashing and transposition tables added and debugged

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ set(SOURCES
     src/uci.cpp
     src/search.cpp
     src/eval.cpp
+    src/zobrist.cpp
+    src/move_list.cpp
     )
 
 add_executable(main ${SOURCES})
