fixed didnt push everythign last commit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,10 @@ if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
 endif()
 
+set(CMAKE_DEBUG_POSTFIX d)
 
-set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wpedantic")
-set(CMAKE_CXX_FLAGS_DEBUG "-g")
+set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wpedantic -Werror ")
+set(CMAKE_CXX_FLAGS_DEBUG "-ggdb3")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
@@ -26,4 +27,6 @@ set(SOURCES
     src/move_list.cpp
     )
 
-    add_executable(moss-v0.13-killer_moves ${SOURCES})
+    add_executable(moss ${SOURCES})
+    set_target_properties(moss PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})
+    set_property(TARGET moss PROPERTY VERSION "0.13-killer_moves")
