basic LMR, parameters probably need further tweaking. Tournament test suggests ELO is ~1800 CCRL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,4 +30,4 @@ set(SOURCES
 
     add_executable(moss ${SOURCES})
     set_target_properties(moss PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})
-    set_property(TARGET moss PROPERTY VERSION "0.15_refactoring_only")
+    set_property(TARGET moss PROPERTY VERSION "0.16_LMR")
